--- a/README.rdoc
+++ b/README.rdoc
@@ -14,4 +14,4 @@ Para fazer deploy, você pode clonar este repositório e utilizar qualquer local
 
 
 Protótipo em:
-<a href="">CMI_ids</a>.
+cmids.herokuapp.com.
